fixed footer spacing and enlarged default view of most iframes.

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -306,14 +306,14 @@ a:active {
   width: 100%;
   min-height: 80px;
   background-image: url(../images/footer-bg1.jpg);
-
+  
 }
 .footer-form {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  height: 60px;
+  height: 20px;
   width: 100%;
   padding: 10px 0;
   font-family: "Open sans";
